--- a/templates/post.html
+++ b/templates/post.html
@@ -2,15 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>LitBlog - Главная</title>
+    <title>LitBlog - {{post.title}}</title>
     <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css"/>
   </head>
   <body>
-    {% for post in posts %}
-    <a href="/posts/{{post.id}}">{{post.title}} </a>
+    <h1>{{post.title}}</h1>
     <article>
-      {{post.post_text[0:150]}}
+      {{post.post_text}}
     </article>
-    {% endfor %}
+    <span class="label label-default">Likes: {{post.likes_number}}</span>
   </body>
 </html>
