--- a/templates/login.html
+++ b/templates/login.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>LitBlog - Логин</title>
-  </head>
-  <body>
+{% extends 'layout_template.html' %}
+{% block title %} Логин {% endblock %}
+{% block body %}
     <form action="/login" method="post">
       <label for="login"></label>
       <input type="text" name="login"/>
@@ -12,5 +8,4 @@
       <input type="password", name="password"/>
       <input type="submit"/>
     </form>
-  </body>
-</html>
+{% endblock %}
