--- a/templates/post.html
+++ b/templates/post.html
@@ -1,15 +1,12 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>LitBlog - {{post.title}}</title>
-    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css"/>
-  </head>
-  <body>
-    <h1>{{post.title}}</h1>
-    <article>
-      {{post.post_text}}
-    </article>
-    <span class="label label-default">Likes: {{post.likes_number}}</span>
-  </body>
-</html>
+{% extends 'layout_template.html'%}
+{% block title %} {{post.title}} {% endblock %}
+{% block body %}
+<div class="blog-post">
+  <h2 class="blog-post-title">{{post.title}}</h2>
+  <p class="blog-post-meta"> {{post.post_date}} </p>
+  <article>
+    {{post.post_text | safe}}
+  </article>
+  <span class="label label-default">Likes: {{post.likes_number}}</span>
+</div>
+{% endblock %}
